tests/snapshots/d10__p1_example.snap
---
source: tests/d10.rs
expression: map
---
Map {
    parsed: [
        Ground,
        Ground,
        Ground,
        Ground,
        Ground,
        Ground,
        RightDownBend,
        HorizontalPipe,
        LeftDownBend,
        Ground,
        Ground,
        VerticalPipe,
        Ground,
        VerticalPipe,
        Ground,
        Ground,
        RightUpBend,
        HorizontalPipe,
        LeftUpBend,
        Ground,
        Ground,
        Ground,
        Ground,
        Ground,
        Ground,
    ],
    dimensions: (
        5,
        5,
    ),
    start_position: None,
}
